# django-cruder

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  __init__.py  pyproject.toml  setup.py  templates.py  urls.py  views.py
cruder/: forms.py
cruder/frameworks/: __init__.py  base.py
cruder/templates/cruder/: base.html  detail.html  list.html
docs/: advanced.rst  api.rst  conf.py  examples.rst  index.rst  quickstart.rst  requirements.txt  settings.py
frameworks/: bootstrap.py  bulma.py
templates/cruder/: form.html
