[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-cruder"
version = "1.0.0"
description = "Advanced CRUD operations for Django with multiple CSS framework support"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Phil Massyn", email = "phil.massyn@icloud.com"}
]
maintainers = [
    {name = "Phil Massyn", email = "phil.massyn@icloud.com"}
]
keywords = ["django", "crud", "forms", "bootstrap", "bulma", "css", "framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0", 
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "Django>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django", 
    "black",
    "flake8",
    "coverage",
]

[project.urls]
Homepage = "https://github.com/massyn/django-cruder"
Documentation = "https://django-cruder.readthedocs.io/"
Repository = "https://github.com/massyn/django-cruder"
"Bug Tracker" = "https://github.com/massyn/django-cruder/issues"

[tool.setuptools]
packages = ["cruder"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
cruder = [
    "templates/cruder/*.html",
    "templates/cruder/*/*.html",
]